<resources>
    <string name="app_name" translatable="false">ReTrurism</string>
    <string name="cancelar">Cancelar</string>
    <string name="contrase_a">Contraseña(*)</string>
    <string name="email">Email (*)</string>
    <string name="he_olvidado_mi_contrase_a">He olvidado mi contraseña</string>
    <string name="logo">logo</string>
    <string name="registro">registro</string>
    <string name="entrar">entrar</string>
    <string name="entrar_invitado">entrar como invitado</string>
    <string name="nombre">Nombre (*)</string>
    <string name="apellido">Apellido</string>
    <string name="enviar">Enviar</string>
    <string name="recibir_noticias">Quiero recibir noticias</string>
    <string name="acepto_las_condiciones">Acepto las condiciones</string>
    <string name="mantener_sesion_abierta">Mantener la sesión iniciada</string>
    <string name="oscuro">Oscuro</string>
    <string name="claro">Claro</string>
    <string name="activar_notificaciones">Activar notificaciones</string>
    <string name="esquema_de_colores">Esquema de colores</string>
    <string name="idiomas">Idiomas</string>
    <string name="ajustes">Ajustes</string>
    <string name="fotos">Fotos</string>
    <string name="mapa">Mapa</string>
    <string name="cuenta">Cuenta</string>
    <string name="explorar">Explorar</string>
    <string name="galeria">Galería</string>
    <string name="foto">foto</string>
    <string name="acerca_de">Acerca de</string>
    <string name="colabora_con_nosotros">Colabora con nosotros</string>
    <string name="mas">Más</string>
    <string name="Colabora">Colabora</string>
    <string name="cabeceraColaboracion">Colabora con nosotros compartiendo tus mejores fotos antiguas de cualquier lugar del mundo.</string>
    <string name="regla1Colaboracion">1. No pueden salir personas en ella, a no ser que estén de fondo o que sean un grupo de personas.</string>
    <string name="regla2Colaboracion"> 2. La foto debe ser de antes de 1990.</string>
    <string name="ejemFotoColaboracion"> Ejemplo:</string>
    <string name="todo">TODO</string>
    <string name="recupPwd">Envíenos su email para recuperar la contraseña</string>
    <string name="titulo">Titulo (*)</string>
    <string name="calle">Calle</string>
    <string name="ciudad">Ciudad (*)</string>
    <string name="anyo">Año (*)</string>
    <string name="Url" translatable="false" />
    <string name="ejemploFoto">Modelo de ejemplo</string>
    <string name="camposreq">(*)Campos requeridos</string>
    <string name="confirmContrase_a">Repita la contraseña (*)</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="peñon" translatable="false">Chalet El Peñón</string>
    <string name="castroUrdiales" translatable="false">Castro Urdiales</string>
    <string name="fecha" translatable="false">1940</string>
    <string name="guardar_cambios">Guardar los cambios</string>
    <string name="Perfil">Perfil</string>
    <string name="Mis_fotos">Mis fotos</string>
    <string name="home" translatable="false">Home</string>
    <string name="descripcion">Descripción</string>
    <string name="salir_sin_guardar">Salir sin guardar</string>
    <string name="apodo">Apodo(*)</string>
    <string name="saludo">Hola, </string>
    <string name="elige_idioma">Elige idioma</string>
    <string name="cambiar_idioma">Idioma</string>
    <string name="elige_tema">Elige tema</string>
    <string name="cambiar_tema">Tema</string>
    <string name="orientacion">Orientación</string>
    <string name="cambiar_orientacion">Cambiar orientación</string>
    <string name="elige_orientacion">Elige orientación</string>
    <string name="English" translatable="false" />
    <string name="Français" translatable="false" />
    <string name="Español" translatable="false" />
    <string name="vertical" translatable="false" />
    <string name="horizontal" translatable="false" />
    <string name="Light" translatable="false" />
    <string name="Dark" translatable="false" />
    <string name="Auto" translatable="false">auto</string>
    <string name="buscador">Buscador</string>
    <string name="mil" translatable="false">1940</string>


</resources>