<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/cambiar_idioma">
        <ListPreference
            android:defaultValue="false"
            android:key="idiomas"
            android:title="@string/idiomas"
            android:summary="@string/elige_idioma"
            android:entries="@array/combo_idiomas"
            android:icon="@drawable/ic_baseline_language_24"
            android:entryValues="@array/combo_idiomas" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cambiar_tema">
        <SwitchPreference
            android:defaultValue="false"
            android:key="tema"
            android:title="@string/cambiar_tema"
            android:summary="@string/elige_tema"
            android:entries="@array/tema_noche_dia"
            android:icon="@drawable/ic_baseline_nights_stay_24"
            android:entryValues="@array/tema_noche_dia" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/orientacion">
        <ListPreference
            android:defaultValue="false"
            android:key="orientacion"
            android:title="@string/cambiar_orientacion"
            android:summary="@string/elige_orientacion"
            android:entries="@array/orientacion"
            android:icon="@drawable/ic_baseline_crop_landscape_24"
            android:entryValues="@array/orientacion" />
    </PreferenceCategory>

</PreferenceScreen>