<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainNav">
    <item
        android:id="@+id/nvExplorar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/explorar"
       />
    <item
        android:id="@+id/nvgGaleria"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_photo_album_24"
        android:title="@string/galeria"/>

    <item
        android:id="@+id/nvCuenta"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/cuenta" />
    <item
        android:id="@+id/nvgColaboracion"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_groups_24"
        android:title="@string/Colabora" />

    <item
        android:id="@+id/nvgMapa"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/mapa"/>


</menu>