<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1A5A1"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="50dp"
    android:paddingRight="50dp"
    tools:context=".AccesoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/app_name"
        android:textColor="#725956"
        android:textAlignment="center"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/logo"
        android:ems="50"
        app:srcCompat="@drawable/icon_logo" />

    <EditText
        android:id="@+id/txtEmailUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_dark"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/darker_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtPwdLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="12dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@android:color/background_dark"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/darker_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtVwOlvidoPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/he_olvidado_mi_contrase_a"
        android:textAlignment="center"
        android:textColor="#725956" />

    <Button

        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:background="#725956"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:background="#725956"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>