<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contenedorAcceso"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="20dp"
    android:paddingRight="50dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:fontFamily="@font/lobster"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font_icon" />

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:ems="50"
        app:srcCompat="@drawable/icon_logo" />

    <EditText
        android:id="@+id/txtEmailAcceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_dialog_email"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="@dimen/font_size" />

    <EditText
        android:id="@+id/txtPwdAcceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/txtVwOlvidoPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/he_olvidado_mi_contrase_a"
        android:textAlignment="center"
        android:textSize="@dimen/font_size"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="@color/colorBackground"
        android:background="@drawable/botones_style"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textColor="@color/colorBackground"
        android:background="@drawable/botones_style"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>