<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    android:background="#C1A5A1">


    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="#C1A5A1"
        android:orientation="vertical"
        android:padding="60dp">

        <TextView
            android:id="@+id/txtCabeceraColaboracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabeceraColaboracion" />

        <EditText
            android:id="@+id/txtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:drawablePadding="12dp"
            android:ems="12"
            android:hint="@string/nombre"
            android:inputType="textAutoComplete"
            android:textColor="#725956"
            android:textColorHighlight="#725956"
            android:textColorHint="#725956"
            android:textColorLink="#725956" />

        <EditText
            android:id="@+id/txtApellidoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textAutoComplete"
            android:textColor="#725956"
            android:textColorHighlight="#725956"
            android:textColorHint="#725956"
            android:textColorLink="#725956" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="textAutoComplete"
            android:textColor="#725956"
            android:textColorHighlight="#725956"
            android:textColorHint="#725956"
            android:textColorLink="#725956" />

        <EditText
            android:id="@+id/txtCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/calle"
            android:inputType="textAutoComplete"
            android:textColor="#725956"
            android:textColorHighlight="#725956"
            android:textColorHint="#725956"
            android:textColorLink="#725956" />

        <EditText
            android:id="@+id/txtCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:drawablePadding="12dp"
            android:ems="12"
            android:hint="@string/ciudad"
            android:inputType="textAutoComplete"
            android:textAlignment="textStart"
            android:textColor="#725956"
            android:textColorHighlight="#725956"
            android:textColorHint="#725956"
            android:textColorLink="#725956" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/fecha"
            android:ems="10"
            android:inputType="date"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txtEjemplo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:drawablePadding="12dp"
            android:ems="12"
            android:hint="@string/ejemploFoto"
            android:textAlignment="textStart"
            android:textColor="#725956"
            android:textColorHighlight="#725956"
            android:textColorHint="#725956"
            android:textColorLink="#725956" />

        <ImageView
            android:id="@+id/imgVwEjemplo"
            android:layout_width="184dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/img_antigua_penyol" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fltActBtn"
            android:layout_width="54dp"
            android:layout_height="67dp"
            android:layout_margin="20dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:backgroundTint="#CBBCAA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.879"
            app:srcCompat="@drawable/ic_baseline_add_circle_24" />

        <Button
            android:id="@+id/btnEnviarFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botones_style"
            android:layout_margin="5dp"
            android:text="@string/enviar"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#A2BDB6"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancelarEnvioFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@drawable/botones_style"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="#A2BDB6"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</ScrollView>