<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedorRecupPwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="50dp">


    <TextView
        android:layout_width="242dp"
        android:layout_height="60dp"
        android:text="@string/recupPwd"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtEmailRecup"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_dialog_email"
        android:drawablePadding="12dp"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEnviarEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/botones_style"
            android:textColor="@color/colorBackground"
            android:text="@string/enviar"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancelarRecupEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/botones_style"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
